tests/syntax_errors/sasha4_2.tl
2.3
8e4
96E324
1.234e9909
40.02E302
0.0e0
0.32E02
9.0e23
0.0
1.0
0.42
1e-3
543e+4
4E-13
43E+24
39.4e-2
0.12e+24
0.52E-034
94.0E+24
0.9
23.3
34.2
